Enhance website with docs page and real download zip

--- a/website/index.html
+++ b/website/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -9,34 +10,38 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@300;500;700&display=swap" rel="stylesheet">
-  </head>
-  <body>
+</head>
+
+<body>
     <div class="bg-glow"></div>
-    
+
     <nav class="navbar glass">
         <div class="logo">Content<span>Scraper</span></div>
         <div class="links">
             <a href="#features">Features</a>
-            <a href="#how-it-works">How It Works</a>
-            <a href="#pricing" class="cta-small">Get Started</a>
+            <a href="docs.html">Documentation</a>
+            <a href="content-scraper-premium.zip" class="cta-small" download>Download</a>
         </div>
     </nav>
-    
+
     <main>
         <section class="hero">
             <div class="hero-content">
                 <h1>Clone Telegram Channels<br><span class="gradient-text">In Real-Time</span></h1>
-                <p>The ultimate tool for content automated mirroring. Clone media, albums, and text instantly with smart modification rules.</p>
+                <p>The ultimate tool for content automated mirroring. Clone media, albums, and text instantly with smart
+                    modification rules.</p>
                 <div class="hero-btns">
-                    <a href="#pricing" class="btn-primary">Download Now</a>
-                    <a href="#features" class="btn-secondary">Learn More</a>
+                    <a href="content-scraper-premium.zip" class="btn-primary" download>Download Now</a>
+                    <a href="docs.html" class="btn-secondary">Learn More</a>
                 </div>
             </div>
             <div class="hero-visual glass">
                 <div class="code-preview">
-                    <div class="line"><span class="c-purple">const</span> <span class="c-blue">clone</span> = <span class="c-purple">await</span> bot.<span class="c-yellow">start</span>();</div>
+                    <div class="line"><span class="c-purple">const</span> <span class="c-blue">clone</span> = <span
+                            class="c-purple">await</span> bot.<span class="c-yellow">start</span>();</div>
                     <div class="line"><span class="c-green">// Real-time monitoring active</span></div>
-                    <div class="line"><span class="c-blue">Processing</span> message: <span class="c-orange">#4829</span></div>
+                    <div class="line"><span class="c-blue">Processing</span> message: <span
+                            class="c-orange">#4829</span></div>
                     <div class="line">Status: <span class="c-green">Cloned ✅</span></div>
                 </div>
             </div>
@@ -94,5 +99,6 @@
         </footer>
     </main>
     <script type="module" src="/main.js"></script>
-  </body>
+</body>
+
 </html>
