Complete multi-page website with pricing, contact, and docs pages

--- a/website/index.html
+++ b/website/index.html
@@ -20,6 +20,8 @@
         <div class="links">
             <a href="#features">Features</a>
             <a href="docs.html">Documentation</a>
+            <a href="pricing.html">Pricing</a>
+            <a href="contact.html">Contact</a>
             <a href="content-scraper-premium.zip" class="cta-small" download>Download</a>
         </div>
     </nav>
