--- a/website/en/contact.html
+++ b/website/en/contact.html
@@ -14,22 +14,21 @@
     <nav class="navbar glass">
         <div class="logo">Content<span>Scraper</span></div>
         <div class="links">
-            <a href="index.html">Главная</a>
-            <a href="docs.html">Документация</a>
-            <a href="pricing.html">Цены</a>
-            <a href="contact.html" style="color: var(--text-primary);">Контакты</a>
+            <a href="index.html">Home</a>
+            <a href="docs.html">Documentation</a>
+            <a href="pricing.html">Pricing</a>
+            <a href="contact.html" style="color: var(--text-primary);">Contact</a>
             <div class="lang-switch">
-                <span class="active">RU</span> | <a href="/en/contact.html">EN</a>
+                <a href="/contact.html">RU</a> | <span class="active">EN</span>
             </div>
         </div>
     </nav>
     <main class="hero">
         <section class="hero-content" style="text-align: center; max-width: 100%; width: 100%;">
-            <h1 class="gradient-text">Связаться с нами</h1>
-            <p style="margin: 0 auto 3rem;">Нужна помощь с настройкой или есть индивидуальные требования? Мы здесь,
-                чтобы помочь.</p>
+            <h1 class="gradient-text">Get In Touch</h1>
+            <p style="margin: 0 auto 3rem;">Need help with setup or have custom requirements? We are here for you.</p>
             <div class="card glass" style="max-width: 500px; margin: 0 auto; padding: 3rem;">
-                <p>Поддержка в Telegram</p>
+                <p>Telegram Support</p>
                 <h3>@your_support_handle</h3>
                 <p style="margin-top: 2rem;">Email</p>
                 <p>support@contentscraper.tech</p>
@@ -37,7 +36,7 @@
         </section>
     </main>
     <footer class="glass">
-        <p>&copy; 2026 Content Scraper. Все права защищены.</p>
+        <p>&copy; 2026 Content Scraper. All rights reserved.</p>
     </footer>
 </body>
 
