--- a/website/index.html
+++ b/website/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 
 <head>
     <meta charset="UTF-8" />
@@ -18,86 +18,89 @@
     <nav class="navbar glass">
         <div class="logo">Content<span>Scraper</span></div>
         <div class="links">
-            <a href="#features">Features</a>
-            <a href="docs.html">Documentation</a>
-            <a href="pricing.html">Pricing</a>
-            <a href="contact.html">Contact</a>
-            <a href="content-scraper-premium.zip" class="cta-small" download>Download</a>
+            <a href="#features">Возможности</a>
+            <a href="docs.html">Документация</a>
+            <a href="pricing.html">Цены</a>
+            <a href="contact.html">Контакты</a>
+            <div class="lang-switch">
+                <span class="active">RU</span> | <a href="/en/index.html">EN</a>
+            </div>
+            <a href="content-scraper-premium.zip" class="cta-small" download>Скачать</a>
         </div>
     </nav>
 
     <main>
         <section class="hero">
             <div class="hero-content">
-                <h1>Clone Telegram Channels<br><span class="gradient-text">In Real-Time</span></h1>
-                <p>The ultimate tool for content automated mirroring. Clone media, albums, and text instantly with smart
-                    modification rules.</p>
+                <h1>Клонируйте Telegram-каналы<br><span class="gradient-text">В реальном времени</span></h1>
+                <p>Ультимативный инструмент для автоматического зеркалирования контента. Клонируйте медиа, альбомы и
+                    текст мгновенно с умными правилами модификации.</p>
                 <div class="hero-btns">
-                    <a href="content-scraper-premium.zip" class="btn-primary" download>Download Now</a>
-                    <a href="docs.html" class="btn-secondary">Learn More</a>
+                    <a href="content-scraper-premium.zip" class="btn-primary" download>Скачать сейчас</a>
+                    <a href="docs.html" class="btn-secondary">Узнать больше</a>
                 </div>
             </div>
             <div class="hero-visual glass">
                 <div class="code-preview">
                     <div class="line"><span class="c-purple">const</span> <span class="c-blue">clone</span> = <span
                             class="c-purple">await</span> bot.<span class="c-yellow">start</span>();</div>
-                    <div class="line"><span class="c-green">// Real-time monitoring active</span></div>
-                    <div class="line"><span class="c-blue">Processing</span> message: <span
+                    <div class="line"><span class="c-green">// Мониторинг запущен</span></div>
+                    <div class="line"><span class="c-blue">Обработка</span> сообщения: <span
                             class="c-orange">#4829</span></div>
-                    <div class="line">Status: <span class="c-green">Cloned ✅</span></div>
+                    <div class="line">Статус: <span class="c-green">Клонировано ✅</span></div>
                 </div>
             </div>
         </section>
 
         <section id="features" class="features">
-            <h2>Premium Features</h2>
+            <h2>Премиум Возможности</h2>
             <div class="grid">
                 <div class="card glass">
                     <div class="icon">⚡</div>
-                    <h3>Real-Time Cloning</h3>
-                    <p>Instant replication of posts from donor channels to your targets with zero delay.</p>
+                    <h3>Клонирование 24/7</h3>
+                    <p>Мгновенная репликация постов из донорских каналов в ваши цели без задержек.</p>
                 </div>
                 <div class="card glass">
                     <div class="icon">🖼️</div>
-                    <h3>Media Support</h3>
-                    <p>Full support for Photos, Videos, Documents, Audio, and complex Media Groups (Albums).</p>
+                    <h3>Поддержка медиа</h3>
+                    <p>Полная поддержка фото, видео, документов, аудио и сложных медиа-групп (альбомов).</p>
                 </div>
                 <div class="card glass">
                     <div class="icon">🪄</div>
-                    <h3>Smart Modifiers</h3>
-                    <p>Automatically remove keyboards, replace links, and clean text on the fly.</p>
+                    <h3>Умные фильтры</h3>
+                    <p>Автоматическое удаление кнопок, замена ссылок и очистка текста на лету.</p>
                 </div>
                 <div class="card glass">
                     <div class="icon">⚙️</div>
-                    <h3>Admin Panel</h3>
-                    <p>Manage pairs and settings directly from Telegram with a powerful inline menu.</p>
+                    <h3>Админ-панель</h3>
+                    <p>Управляйте парами и настройками прямо из Telegram через мощное инлайн-меню.</p>
                 </div>
             </div>
         </section>
 
         <section id="how-it-works" class="steps">
-            <h2>How It Works</h2>
+            <h2>Как это работает</h2>
             <div class="step-container">
                 <div class="step">
                     <div class="num">01</div>
-                    <h3>Install</h3>
-                    <p>Run the one-click installer script.</p>
+                    <h3>Установка</h3>
+                    <p>Запустите инсталлятор в один клик.</p>
                 </div>
                 <div class="step">
                     <div class="num">02</div>
-                    <h3>Configure</h3>
-                    <p>Add your keys and bot token.</p>
+                    <h3>Настройка</h3>
+                    <p>Добавьте ваши ключи и токен бота.</p>
                 </div>
                 <div class="step">
                     <div class="num">03</div>
-                    <h3>Dominate</h3>
-                    <p>Add channel pairs and watch the content flow.</p>
+                    <h3>Запуск</h3>
+                    <p>Добавьте пары каналов и наблюдайте за потоком контента.</p>
                 </div>
             </div>
         </section>
 
         <footer class="glass">
-            <p>&copy; 2026 Content Scraper. All rights reserved.</p>
+            <p>&copy; 2026 Content Scraper. Все права защищены.</p>
         </footer>
     </main>
     <script type="module" src="/main.js"></script>
