--- a/website/pricing.html
+++ b/website/pricing.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 
 <head>
     <meta charset="UTF-8" />
@@ -14,36 +14,40 @@
     <nav class="navbar glass">
         <div class="logo">Content<span>Scraper</span></div>
         <div class="links">
-            <a href="index.html">Home</a>
-            <a href="docs.html">Documentation</a>
-            <a href="pricing.html" style="color: var(--text-primary);">Pricing</a>
-            <a href="content-scraper-premium.zip" class="cta-small" download>Download</a>
+            <a href="index.html">Главная</a>
+            <a href="docs.html">Документация</a>
+            <a href="pricing.html" style="color: var(--text-primary);">Цены</a>
+            <a href="contact.html">Контакты</a>
+            <div class="lang-switch">
+                <span class="active">RU</span> | <a href="/en/pricing.html">EN</a>
+            </div>
+            <a href="content-scraper-premium.zip" class="cta-small" download>Скачать</a>
         </div>
     </nav>
     <main class="hero">
         <section class="hero-content" style="text-align: center; max-width: 100%; width: 100%;">
-            <h1 class="gradient-text">Choose Your Plan</h1>
-            <p style="margin: 0 auto 3rem;">Straightforward pricing for professional content managers.</p>
+            <h1 class="gradient-text">Выберите ваш план</h1>
+            <p style="margin: 0 auto 3rem;">Простые и прозрачные цены для профессионалов.</p>
             <div class="grid" style="max-width: 900px; margin: 0 auto;">
                 <div class="card glass">
-                    <h3>Free Trial</h3>
-                    <p>Get started with 3 pairs of channels for 7 days.</p>
+                    <h3>Пробный период</h3>
+                    <p>Начните с 3 пар каналов на 7 дней.</p>
                     <div style="font-size: 2.5rem; font-weight: 700; margin: 1rem 0;">$0</div>
-                    <a href="docs.html" class="btn-secondary" style="display: block;">Learn More</a>
+                    <a href="docs.html" class="btn-secondary" style="display: block;">Подробнее</a>
                 </div>
                 <div class="card glass" style="border-color: var(--accent-purple);">
-                    <h3>Premium</h3>
-                    <p>Unlimited channels, high-priority media cloning and support.</p>
+                    <h3>Премиум</h3>
+                    <p>Безлимитные каналы, приоритетное клонирование медиа и поддержка.</p>
                     <div style="font-size: 2.5rem; font-weight: 700; margin: 1rem 0;">$49 <span
-                            style="font-size: 1rem; color: var(--text-secondary);">/ life</span></div>
-                    <a href="content-scraper-premium.zip" class="btn-primary" style="display: block;" download>Download
-                        Now</a>
+                            style="font-size: 1rem; color: var(--text-secondary);">/ навсегда</span></div>
+                    <a href="content-scraper-premium.zip" class="btn-primary" style="display: block;" download>Скачать
+                        сейчас</a>
                 </div>
             </div>
         </section>
     </main>
     <footer class="glass">
-        <p>&copy; 2026 Content Scraper. All rights reserved.</p>
+        <p>&copy; 2026 Content Scraper. Все права защищены.</p>
     </footer>
 </body>
 
