--- a/website/docs.html
+++ b/website/docs.html
@@ -96,6 +96,11 @@
 
     <nav class="navbar glass">
         <div class="logo">Content<span>Scraper</span></div>
+        <div class="menu-toggle">
+            <span></span>
+            <span></span>
+            <span></span>
+        </div>
         <div class="links">
             <a href="index.html">Главная</a>
             <a href="docs.html" style="color: var(--text-primary);">Документация</a>
@@ -164,7 +169,8 @@
                 <li><strong>Донор (Donor):</strong> Канал, откуда мы берем контент. Вы должны быть подписаны на него
                     своим основным аккаунтом.</li>
                 <li><strong>Цель (Target):</strong> Канал, куда мы постим. Бот должен быть назначен в нем
-                    <strong>Администратором</strong>.</li>
+                    <strong>Администратором</strong>.
+                </li>
             </ul>
 
             <div class="warning-box">
