--- a/website/en/docs.html
+++ b/website/en/docs.html
@@ -96,6 +96,11 @@
 
     <nav class="navbar glass">
         <div class="logo">Content<span>Scraper</span></div>
+        <div class="menu-toggle">
+            <span></span>
+            <span></span>
+            <span></span>
+        </div>
         <div class="links">
             <a href="index.html">Home</a>
             <a href="docs.html" style="color: var(--text-primary);">Documentation</a>
@@ -166,7 +171,8 @@
                 <li><strong>Donor:</strong> The source channel. You must be subscribed to it with your main account.
                 </li>
                 <li><strong>Target:</strong> The destination channel. The bot must be assigned as an
-                    <strong>Administrator</strong> in it.</li>
+                    <strong>Administrator</strong> in it.
+                </li>
             </ul>
 
             <div class="warning-box">
