--- a/website/en/index.html
+++ b/website/en/index.html
@@ -17,6 +17,11 @@
 
     <nav class="navbar glass">
         <div class="logo">Content<span>Scraper</span></div>
+        <div class="menu-toggle">
+            <span></span>
+            <span></span>
+            <span></span>
+        </div>
         <div class="links">
             <a href="#features">Features</a>
             <a href="docs.html">Documentation</a>
