--- a/website/pricing.html
+++ b/website/pricing.html
@@ -13,6 +13,11 @@
     <div class="bg-glow"></div>
     <nav class="navbar glass">
         <div class="logo">Content<span>Scraper</span></div>
+        <div class="menu-toggle">
+            <span></span>
+            <span></span>
+            <span></span>
+        </div>
         <div class="links">
             <a href="index.html">Главная</a>
             <a href="docs.html">Документация</a>
