Feat: Finalized Sniffer Licensing and Enhanced UI, Updated Zip Archive.

--- a/website/docs.html
+++ b/website/docs.html
@@ -197,7 +197,27 @@
         </section>
 
         <section class="doc-section">
-            <h2>5. Часто задаваемые вопросы (FAQ)</h2>
+            <h2>5. Channel ID Sniffer (Поиск ID)</h2>
+            <p>Часто бывает сложно найти ID приватного канала или канала, на который вы только что подписались. Для
+                этого мы создали <strong>Sniffer Tool</strong>.</p>
+
+            <h3>Как запустить</h3>
+            <ol>
+                <li>Запустите <code>python main.py</code>.</li>
+                <li>В появившемся меню выберите пункт <code>2</code> (Channel ID Sniffer).</li>
+                <li>Скрипт начнет слушать все входящие сообщения на вашем аккаунте.</li>
+            </ol>
+
+            <h3>Просмотр результатов</h3>
+            <p>Как только в нужных каналах появятся сообщения, сниффер перехватит их ID. Вы можете увидеть результаты в
+                реальном времени в консоли или открыть файл:</p>
+            <code>sniffer_log.html</code>
+            <p>Это красивый HTML-отчет, где можно просто нажать на ID, чтобы скопировать его в буфер обмена для
+                дальнейшего добавления в скрапер.</p>
+        </section>
+
+        <section class="doc-section">
+            <h2>6. Часто задаваемые вопросы (FAQ)</h2>
             <h3>Нужен ли VPN?</h3>
             <p>Если в вашем регионе Telegram не заблокирован напрямую — нет. Если же вы запускаете бота из РФ без
                 прокси, могут быть задержки.</p>
