--- a/website/en/pricing.html
+++ b/website/en/pricing.html
@@ -35,18 +35,21 @@
             <p style="margin: 0 auto 3rem;">Straightforward pricing for professional content managers.</p>
             <div class="grid" style="max-width: 900px; margin: 0 auto;">
                 <div class="card glass">
-                    <h3>Free Trial</h3>
-                    <p>Get started with 3 pairs of channels for 7 days.</p>
-                    <div style="font-size: 2.5rem; font-weight: 700; margin: 1rem 0;">$0</div>
-                    <a href="docs.html" class="btn-secondary" style="display: block;">Learn More</a>
+                    <h3>Monthly</h3>
+                    <p>Full access to all scraper features for 30 days.</p>
+                    <div style="font-size: 2.5rem; font-weight: 700; margin: 1rem 0;">$20 <span
+                            style="font-size: 1rem; color: var(--text-secondary);">/ month</span></div>
+                    <a href="contact.html" class="btn-secondary" style="display: block;">Buy Now</a>
                 </div>
-                <div class="card glass" style="border-color: var(--accent-purple);">
-                    <h3>Premium</h3>
-                    <p>Unlimited channels, high-priority media cloning and support.</p>
-                    <div style="font-size: 2.5rem; font-weight: 700; margin: 1rem 0;">$49 <span
-                            style="font-size: 1rem; color: var(--text-secondary);">/ life</span></div>
-                    <a href="content-scraper-premium.zip" class="btn-primary" style="display: block;" download>Download
-                        Now</a>
+                <div class="card glass" style="border-color: var(--accent-purple); position: relative;">
+                    <div
+                        style="position: absolute; top: -10px; right: 20px; background: var(--accent-purple); padding: 2px 10px; border-radius: 20px; font-size: 0.8rem;">
+                        BEST VALUE</div>
+                    <h3>Yearly VIP</h3>
+                    <p>All features + 🎁 <b>Sniffer ID Tool</b> as a lifetime gift!</p>
+                    <div style="font-size: 2.5rem; font-weight: 700; margin: 1rem 0;">$240 <span
+                            style="font-size: 1rem; color: var(--text-secondary);">/ year</span></div>
+                    <a href="contact.html" class="btn-primary" style="display: block;">Get with Bonus</a>
                 </div>
             </div>
         </section>
