--- a/website/pricing.html
+++ b/website/pricing.html
@@ -35,18 +35,21 @@
             <p style="margin: 0 auto 3rem;">Простые и прозрачные цены для профессионалов.</p>
             <div class="grid" style="max-width: 900px; margin: 0 auto;">
                 <div class="card glass">
-                    <h3>Пробный период</h3>
-                    <p>Начните с 3 пар каналов на 7 дней.</p>
-                    <div style="font-size: 2.5rem; font-weight: 700; margin: 1rem 0;">$0</div>
-                    <a href="docs.html" class="btn-secondary" style="display: block;">Подробнее</a>
+                    <h3>Ежемесячный</h3>
+                    <p>Доступ ко всем функциям скрапера на 30 дней.</p>
+                    <div style="font-size: 2.5rem; font-weight: 700; margin: 1rem 0;">$20 <span
+                            style="font-size: 1rem; color: var(--text-secondary);">/ месяц</span></div>
+                    <a href="contact.html" class="btn-secondary" style="display: block;">Купить сейчас</a>
                 </div>
-                <div class="card glass" style="border-color: var(--accent-purple);">
-                    <h3>Премиум</h3>
-                    <p>Безлимитные каналы, приоритетное клонирование медиа и поддержка.</p>
-                    <div style="font-size: 2.5rem; font-weight: 700; margin: 1rem 0;">$49 <span
-                            style="font-size: 1rem; color: var(--text-secondary);">/ навсегда</span></div>
-                    <a href="content-scraper-premium.zip" class="btn-primary" style="display: block;" download>Скачать
-                        сейчас</a>
+                <div class="card glass" style="border-color: var(--accent-purple); position: relative;">
+                    <div
+                        style="position: absolute; top: -10px; right: 20px; background: var(--accent-purple); padding: 2px 10px; border-radius: 20px; font-size: 0.8rem;">
+                        ВЫГОДНО</div>
+                    <h3>Годовой VIP</h3>
+                    <p>Все функции + 🎁 <b>Sniffer ID Tool</b> в подарок навсегда!</p>
+                    <div style="font-size: 2.5rem; font-weight: 700; margin: 1rem 0;">$240 <span
+                            style="font-size: 1rem; color: var(--text-secondary);">/ год</span></div>
+                    <a href="contact.html" class="btn-primary" style="display: block;">Получить с бонусом</a>
                 </div>
             </div>
         </section>
