feat: Introduce license verification, migrate API credentials to .env, and add premium documentation.

--- a/website/docs.html
+++ b/website/docs.html
@@ -132,7 +132,10 @@
             <h3>Установка</h3>
             <p>1. Скачайте архив <code>content-scraper-premium.zip</code>.</p>
             <p>2. Распакуйте его в отдельную папку.</p>
-            <p>3. Запустите <code>install.bat</code> — это автоматически создаст виртуальное окружение и установит все
+            <p>3. **Запуск терминала**: Чтобы открыть терминал в папке, нажмите на пустое место **правой кнопкой мыши**
+                и выберите <code>Открыть в терминале</code> (или <code>Shift + ПКМ</code> ->
+                <code>Открыть окно PowerShell здесь</code>).</p>
+            <p>4. Запустите <code>install.bat</code> — это автоматически создаст виртуальное окружение и установит все
                 нужные библиотеки.</p>
         </section>
 
@@ -146,7 +149,9 @@
                         style="color: var(--accent-blue);">my.telegram.org</a>.</li>
                 <li>Авторизуйтесь и создайте новое приложение (любое название).</li>
                 <li>Скопируйте <code>App api_id</code> и <code>App api_hash</code>.</li>
-                <li>Откройте файл <code>keys.py</code> и вставьте их туда.</li>
+                <li>Откройте файл <code>.env</code> и вставьте их туда в соответствующие поля.</li>
+                <li><strong>Важно:</strong> В файле <code>.env</code> кавычки не обязательны, но можно использовать
+                    одинарные.</li>
             </ul>
 
             <h3>Создание Бота</h3>
