--- a/website/index.html
+++ b/website/index.html
@@ -37,12 +37,15 @@
     <main>
         <section class="hero">
             <div class="hero-content">
-                <h1>Клонируйте Telegram-каналы<br><span class="gradient-text">В реальном времени</span></h1>
-                <p>Ультимативный инструмент для автоматического зеркалирования контента. Клонируйте медиа, альбомы и
-                    текст мгновенно с умными правилами модификации.</p>
+                <div class="hero-image-container">
+                    <img src="/images/hero.png" alt="Content Scraper Premium" class="hero-main-img">
+                </div>
+                <h1>Масштабируйте свой контент в <span>Telegram</span></h1>
+                <p>Профессиональный инструмент для автоматического клонирования каналов, обхода ограничений и глубокой
+                    аналитики контента.</p>
                 <div class="hero-btns">
-                    <a href="content-scraper-premium.zip" class="btn-primary" download>Скачать сейчас</a>
-                    <a href="docs.html" class="btn-secondary">Узнать больше</a>
+                    <a href="#pricing" class="btn-primary">Начать работу</a>
+                    <a href="docs.html" class="btn-secondary">Документация</a>
                 </div>
             </div>
             <div class="hero-visual glass">
@@ -69,6 +72,12 @@
                     <div class="icon">🖼️</div>
                     <h3>Поддержка медиа</h3>
                     <p>Полная поддержка фото, видео, документов, аудио и сложных медиа-групп (альбомов).</p>
+                </div>
+                <div class="feature-card glass">
+                    <img src="/images/sniffer-icon.png" alt="Sniffer"
+                        style="width: 80px; margin-bottom: 1rem; border-radius: 12px;">
+                    <h3>Channel ID Sniffer</h3>
+                    <p>Перехватывайте ID любых приватных каналов в реальном времени. Просто подпишитесь, и ID у вас.</p>
                 </div>
                 <div class="card glass">
                     <div class="icon">🪄</div>
