feat: Add new website structure including English documentation and homepage, and update the premium content zip.

--- a/website/en/index.html
+++ b/website/en/index.html
@@ -6,7 +6,7 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Content Scraper | Premium Telegram Tools</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@300;500;700&display=swap" rel="stylesheet">
@@ -71,9 +71,10 @@
                     <p>Full support for Photos, Videos, Documents, Audio, and complex Media Groups (Albums).</p>
                 </div>
                 <div class="card glass">
-                    <div class="icon">🪄</div>
-                    <h3>Smart Modifiers</h3>
-                    <p>Automatically remove keyboards, replace links, and clean text on the fly.</p>
+                    <div class="icon"><img src="/images/sniffer-icon.png" alt="Sniffer"
+                            style="width: 40px; height: 40px; object-fit: contain;"></div>
+                    <h3>Channel ID Sniffer</h3>
+                    <p>Intercept IDs of any private channels in real-time. Just subscribe, and you have the ID.</p>
                 </div>
                 <div class="card glass">
                     <div class="icon">⚙️</div>
