--- a/website/index.html
+++ b/website/index.html
@@ -38,7 +38,7 @@
         <section class="hero">
             <div class="hero-content">
                 <div class="hero-image-container">
-                    <img src="/images/hero.png" alt="Content Scraper Premium" class="hero-main-img">
+                    <img src="/images/hero_fixed.png" alt="Content Scraper Premium" class="hero-main-img">
                 </div>
                 <h1>Масштабируйте свой контент в <span>Telegram</span></h1>
                 <p>Профессиональный инструмент для автоматического клонирования каналов, обхода ограничений и глубокой
@@ -73,9 +73,9 @@
                     <h3>Поддержка медиа</h3>
                     <p>Полная поддержка фото, видео, документов, аудио и сложных медиа-групп (альбомов).</p>
                 </div>
-                <div class="feature-card glass">
-                    <img src="/images/sniffer-icon.png" alt="Sniffer"
-                        style="width: 80px; margin-bottom: 1rem; border-radius: 12px;">
+                <div class="card glass">
+                    <div class="icon"><img src="/images/sniffer-icon.png" alt="Sniffer"
+                            style="width: 40px; height: 40px; object-fit: contain;"></div>
                     <h3>Channel ID Sniffer</h3>
                     <p>Перехватывайте ID любых приватных каналов в реальном времени. Просто подпишитесь, и ID у вас.</p>
                 </div>
