--- a/website/en/docs.html
+++ b/website/en/docs.html
@@ -6,7 +6,7 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Documentation | Content Scraper</title>
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="../style.css">
     <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@300;500;700&display=swap" rel="stylesheet">
     <style>
         .doc-container {
@@ -109,7 +109,7 @@
             <div class="lang-switch">
                 <a href="/docs.html">RU</a> | <span class="active">EN</span>
             </div>
-            <a href="/content-scraper-premium.zip" class="cta-small" download>Download</a>
+            <a href="../content-scraper-premium.zip" class="cta-small" download>Download</a>
         </div>
     </nav>
 
@@ -134,7 +134,8 @@
             <p>2. Extract it into a separate folder.</p>
             <p>3. **Open Terminal**: To open a terminal in the folder, **right-click** on an empty space and select
                 <code>Open in Terminal</code> (or <code>Shift + Right-click</code> ->
-                <code>Open PowerShell window here</code>).</p>
+                <code>Open PowerShell window here</code>).
+            </p>
             <p>4. Run <code>install.bat</code> — this will automatically create a virtual environment and install all
                 necessary libraries.</p>
         </section>
