feat: create Content Scraper Premium marketing website and update associated software package and bot icon.

--- a/website/en/index.html
+++ b/website/en/index.html
@@ -30,7 +30,7 @@
             <div class="lang-switch">
                 <a href="/index.html">RU</a> | <span class="active">EN</span>
             </div>
-            <a href="/content-scraper-premium.zip" class="cta-small" download>Download</a>
+            <a href="../content-scraper-premium.zip" class="cta-small" download>Download</a>
         </div>
     </nav>
 
@@ -71,8 +71,8 @@
                     <p>Full support for Photos, Videos, Documents, Audio, and complex Media Groups (Albums).</p>
                 </div>
                 <div class="card glass">
-                    <div class="icon"><img src="/images/sniffer-icon.png" alt="Sniffer"
-                            style="width: 40px; height: 40px; object-fit: contain;"></div>
+                    <div class="icon"><img src="/images/demon_icon.png" alt="Sniffer"
+                            style="width: 44px; height: 44px; object-fit: contain; border-radius: 8px;"></div>
                     <h3>Channel ID Sniffer</h3>
                     <p>Intercept IDs of any private channels in real-time. Just subscribe, and you have the ID.</p>
                 </div>
